--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <link rel="icon" type="image/png" href="sk.jpg">
 </head>
 <body>
-  <!-- Particle Background -->
+  <!-- Particles.js Background -->
   <div id="particles-js"></div>
+  
+  <!-- Cursor Trail Canvas -->
+  <canvas id="cursor-trail"></canvas>
   
   <!-- Theme Toggle -->
   <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
@@ -36,14 +39,8 @@
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
-        <li><a href="#instagram-dm" class="nav-link"><i class="fab fa-instagram"></i> Message</a></li>
         <li class="close-menu" aria-label="Close menu"><i class="fas fa-times"></i></li>
       </ul>
-      <!-- Message Icon -->
-      <button id="message-btn" class="message-btn" aria-label="Open messages">
-        <i class="fas fa-envelope"></i>
-        <span id="message-badge" class="message-badge">0</span>
-      </button>
       <button class="hamburger" aria-label="Toggle menu" aria-expanded="false">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -52,36 +49,23 @@
     </div>
   </nav>
 
-  <!-- message Drawer -->
-  <div id="message-drawer" class="message-drawer">
-    <div class="message-header">
-      <h3>Send Message to Instagram</h3>
-      <button id="close-messages" class="close-messages" aria-label="Close messages">
-        <i class="fas fa-times"></i>
-      </button>
-    </div>
-    <div class="message-list" id="message-list">
-      <!-- Messages will be dynamically added here -->
-    </div>
-    <div class="message-input">
-      <input type="text" id="new-message" placeholder="Type a message for Shashank...">
-      <button id="send-message">
-        <i class="fas fa-paper-plane"></i>
-      </button>
-    </div>
-  </div>
-  
-  <!-- Message Overlay -->
-  <div id="message-overlay" class="message-overlay"></div>
-
   <!-- Hero Section -->
   <section id="home" class="hero">
+    <div class="hero-3d-background">
+      <div class="cube cube-1"></div>
+      <div class="cube cube-2"></div>
+      <div class="cube cube-3"></div>
+      <div class="triangle triangle-1"></div>
+      <div class="triangle triangle-2"></div>
+    </div>
     <div class="hero-content">
-      <h1 class="hero-title">
-        <span class="title-line">Hello, I'm</span>
-        <span class="title-name">Shashank Mishra</span>
-        <span class="title-sub"><span id="typed"></span></span>
-      </h1>
+      <div class="hologram-title">
+        <h1 class="hero-title">
+          <span class="title-line">Hello, I'm</span>
+          <span class="title-name">Shashank Mishra</span>
+          <span class="title-sub"><span id="typed"></span></span>
+        </h1>
+      </div>
       <div class="hero-btns">
         <a href="#work" class="btn btn-primary">View My Work</a>
         <a href="#contact" class="btn btn-secondary">Hire Me</a>
@@ -100,7 +84,7 @@
           srcset="sk.jpg,skmax-width 600px480px.png, skmax-width 1200px800px.png"
           sizes="(max-width: 600px) 480px, (max-width: 1200px) 800px, 1200px"
           alt="Shashank Mishra" 
-          class="profile-img" 
+          class="profile-img hologram-img" 
           loading="lazy">
         <div class="shape shape-1"></div>
         <div class="shape shape-2"></div>
@@ -120,6 +104,7 @@
       <div class="project-card">
         <div class="project-image">
           <img src="Ecommerce Sales Dashboard.png" alt="E-commerce Dashboard" loading="lazy">
+          <div class="scanline"></div>
           <div class="project-links">
             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
@@ -139,6 +124,7 @@
       <div class="project-card">
         <div class="project-image">
           <img src="058f1975-a4dd-495d-a18c-150934bb231f-The_Points_Guy_App_handout.webp" alt="Travel App" loading="lazy">
+          <div class="scanline"></div>
           <div class="project-links">
             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
@@ -239,7 +225,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="about">
+  <section id="about" class="skills">
     <div class="about-container">
       <div class="about-image">
         <img src="sk.jpg" alt="About Shashank" loading="lazy">
@@ -270,7 +256,7 @@
             <span class="stat-label">Years Exp</span>
           </div>
         </div>
-        <a href="resume.pdf" class="btn btn-primary" download>
+        <a href="cv.pdf" class="btn btn-primary" download>
           <i class="fas fa-download"></i> Download CV
         </a>
       </div>
@@ -292,14 +278,14 @@
         </div>
         <div class="form-group">
           <label for="email" class="sr-only">Your Email</label>
-          <input type="email" id="email" name="email" placeholder="Your Email" required>
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
         </div>
         <div class="form-group">
           <label for="message" class="sr-only">Your Message</label>
           <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">
-          <i class="fas fa-paper-plane"></i> Send Message
+          <i class="fas fa-paper-plane"></i> Send
         </button>
         <div id="form-message" class="form-message" style="display:none; color: green; margin-top: 1rem;">
           Thank you! Your message has been sent.
@@ -331,44 +317,6 @@
     </div>
   </section>
   
-  <!-- Instagram Direct Message Section -->
-  <section id="instagram-dm" class="instagram-dm">
-    <div class="section-header">
-      <h2 class="section-title">Message on Instagram</h2>
-      <p class="section-subtitle">Connect with me directly</p>
-    </div>
-    <div class="instagram-container">
-      <div class="instagram-profile">
-        <img src="sk.jpg" alt="Shashank Mishra Instagram" class="instagram-avatar">
-        <div class="instagram-info">
-          <h3>@shashank_mishra.3</h3>
-          <span class="instagram-status">Active Now</span>
-        </div>
-      </div>
-      
-      <div class="instagram-message-wrapper">
-        <form id="instagram-message-form" class="instagram-message-form">
-          <div class="form-group">
-            <label for="instagram-name" class="sr-only">Your Name</label>
-            <input type="text" id="instagram-name" name="name" placeholder="Your Name" required>
-          </div>
-          <div class="form-group">
-            <label for="instagram-message" class="sr-only">Your Message</label>
-            <textarea id="instagram-message" name="message" placeholder="Type your Instagram message here..." rows="3" required></textarea>
-          </div>
-          <div class="instagram-buttons">
-            <button type="submit" class="btn instagram-btn">
-              <i class="fas fa-paper-plane"></i> Send to Instagram
-            </button>
-            <a href="https://www.instagram.com/direct/t/shashank_mishra.3" target="_blank" class="btn instagram-direct-btn">
-              <i class="fab fa-instagram"></i> Open Instagram Direct
-            </a>
-          </div>
-        </form>
-      </div>
-    </div>
-  </section>
-  
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
@@ -379,7 +327,6 @@
         <a href="#skills">Skills</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="#instagram-dm"><i class="fab fa-instagram"></i> Message</a>
       </div>
       <div class="footer-copy">
         © 2025 Shashank Mishra. All rights reserved.
@@ -393,11 +340,11 @@
   </a>
 
   <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="script.js"></script>
   
   <!-- Notification Template (for reference, will be dynamically created) -->
@@ -410,5 +357,3 @@
   </div>
 </body>
 </html>
-
-
